--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <link rel="stylesheet" href="style.css">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div class="container" >
-    <div class="saidebar" >
-      <div class="box" >
-      <div class="blue" >
-
-        </div>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <title>BAKO</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="sidebar">
+        <img src="./litso-cheloveka-1.jpg" alt="">
+        <h1>Bako Doe</h1>
+        <p>WHEREYOUNG</p>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Servis</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Words</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Close</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
-    <div class="content" >
-      <div class="box" >
-        <div class="box" >
-
-        </div> 
-      </div>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
