--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <title>BAKO</title>
+    <title>About Me</title>
   </head>
   <body>
-    <div class="container">
-      <div class="sidebar">
-        <img src="./litso-cheloveka-1.jpg" alt="">
-        <h1>Bako Doe</h1>
-        <p>WHEREYOUNG</p>
+    <div class="con-1">
+      <div class="saidebar">
+        <img src="./Без названия.jfif" alt="" width="70">
+        <h1></h1>
+        <span>welabvkAC</span>
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Servis</a></li>
-            <li><a href="#">Resume</a></li>
-            <li><a href="#">Words</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Close</a></li>
+            <li><a href="#">home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">servises</a></li>
+            <li><a href="#">resume</a></li>
+            
           </ul>
         </nav>
+      </div>
+      <div class="content">
+        
       </div>
     </div>
   </body>
 </html>
+
