--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <title>About Me</title>
+    <title>davakin</title>
   </head>
   <body>
     <div class="con-1">
@@ -15,7 +15,9 @@
             <li><a href="#">about</a></li>
             <li><a href="#">servises</a></li>
             <li><a href="#">resume</a></li>
-            
+            <li><a href="#">resume</a></li>
+            <li><a href="#">resume</a></li>
+            <li><a href="#">resume</a></li>
           </ul>
         </nav>
       </div>
